--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>TODO App</title>
+		<!-- font -->
+		<link
+			href="https://fonts.googleapis.com/css?family=Lexend+Deca:100,200,300,regular,500,600,700,800,900"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<div id="root"></div>
